--- a/front/webapp.html
+++ b/front/webapp.html
@@ -24,7 +24,8 @@
 		<a href="javascript:;">예금상품</a>		
 		<a href="javascript:;">인증센터</a>		
 		<a href="javascript:;">고객센터</a>		
-		<a href="javascript:;">앱설정</a>
+		<a href="javascript:;">앱설정</a>	
+		<a href="javascript:;">어시스턴트</a>
 		<img src="img/kp-drawer-add.png">
 	</div>
 	<div id="drawer-right">
@@ -76,6 +77,16 @@
 		<div class="drawer-content">
 			<p class="drawer-title">앱설정</p>
 			<p style="padding:15px 10px; font-size:14px;">목업 미구현 서비스입니다.</p>
+		</div>
+		<div class="drawer-content">
+			<p class="drawer-title">KP 어시스턴트</p>
+			<div id="kpa">
+				<form id ="kpa-form" action="http://xinkle.io:7777/connect" method="post">
+					<p class="kpa-label">상담 고객님의 접속 번호를 입력하세요.</p>
+					<input id="connect_id" name="connect_id" type="number">
+					<button id="kpa-submit" type="submit">어시스턴트 접속</button>
+				</form>
+			</div>			
 		</div>
 	</div>
 </div>
