--- a/front/webapp.html
+++ b/front/webapp.html
@@ -81,7 +81,7 @@
 		<div class="drawer-content">
 			<p class="drawer-title">KP 어시스턴트</p>
 			<div id="kpa">
-				<form id ="kpa-form" action="http://xinkle.io:7777/connect" method="post">
+				<form id ="kpa-form" action="http://116.39.0.146:7777/connect" method="post">
 					<p class="kpa-label">상담 고객님의 접속 번호를 입력하세요.</p>
 					<input id="connect_id" name="connect_id" type="number">
 					<button id="kpa-submit" type="submit">어시스턴트 접속</button>
