--- a/front/webapp.html
+++ b/front/webapp.html
@@ -113,6 +113,7 @@
 	<div id="content">
 		<div class="content-tab">
 			<img class="w100" src="img/kp-tab1.png">
+			<a id="btn-more" href="javascript:;">+ 상품 더보기</a>
 		</div>
 		<div class="content-tab active">
 			<img class="w100" src="img/kp-tab2.png">
