--- a/front/webapp.html
+++ b/front/webapp.html
@@ -18,14 +18,13 @@
 		<img src="img/kp-prodlist.png" style="width:100%;">
 		<a href="javascript:;" id="proto-btn1" style="position:absolute;top:61.71%;left:49.14%;width:22.35%;height:2.14%;background:url(about:blank);display:block;"></a>
 	</div>
-	<div id="proto-1">
-		<div style="position:relative;font-size:0;padding:0;max-width:810px;max-height:2618px;">
-			<img src="img/kp-proto-1.png" style="width:100%;">
-			<a href="javascript:;" id="proto-btn2" style="position:absolute;top:17.84%;left:49.63%;width:48.27%;height:2.90%;background:url(about:blank);display:block;"></a>
-		</div>
+	<div id="proto-1" style="position:relative;font-size:0;padding:0;max-width:810px;max-height:2618px;">
+		<img src="img/kp-proto-1.png" style="width:100%;">
+		<a href="javascript:;" id="proto-btn2" style="position:absolute;top:17.84%;left:49.63%;width:48.27%;height:2.90%;background:url(about:blank);display:block;"></a>
 	</div>
-	<div id="proto-2">
+	<div id="proto-2" style="position:relative;font-size:0;padding:0;max-width:810px;max-height:2379px;">
 		<img src="img/kp-proto-2.png" style="width:100%;">
+		<a href="javascript:;" id="proto-final" style="position:absolute;top:43.38%;left:4.44%;width:90.86%;height:4.58%;background:url(about:blank);display:block;"></a>
 	</div>
 </div>
 <div id="drawer">
