--- a/front/webapp.html
+++ b/front/webapp.html
@@ -10,6 +10,7 @@
 <script src="js/kp.js"></script>
 </head>
 <body>
+<input id="hidden" type="hidden" value="0">
 <div id="proto1">
 	<div id="proto-top">
 		<img src="img/proto-top.png" style="width:100%;">
